--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;800;900&family=Island+Moments&family=Jomhuria&family=Open+Sans:ital,wght@0,500;0,600;0,700;1,800&family=Roboto:wght@100;300;400;500;900&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap"
             rel="stylesheet">
         <!-- FontAwesome Library -->
-        <link rel="stylesheet" href="CSS/all.min.css">
+        <link rel="stylesheet" href="./CSS/all.min.css">
         <!-- My Framework, I created to Design -->
-        <link rel="stylesheet" href="CSS/framework.css">
+        <link rel="stylesheet" href="./CSS/framework.css">
         <!-- The main File CSS -->
-        <link rel="stylesheet" href="CSS/main.css">
+        <link rel="stylesheet" href="./CSS/main.css">
     </head>
 
     <body class="bg">
